Fix img display on mobile

--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -204,9 +204,10 @@ article {
   border-radius: 5px;
 }
 img {
-  border: 8px solid var(--bg-color-footer);
-  border: 8px solid black;
+  border: 4px solid black;
   border-radius: 5px;
+  max-width: calc(100% - 16px); /* subtract the added border */
+  height: auto;
 }
 .article-title {
   margin-bottom: 2px;
